Indicator Z-Index Fix + Service Clear

--- a/src/assets/scss/pages/_pages-index.scss
+++ b/src/assets/scss/pages/_pages-index.scss
@@ -53,7 +53,7 @@
 
     padding-left: var(--spacing-l);
 
-    z-index: 2;
+    z-index: 0;
     }
 
     &__indicator {
@@ -247,8 +247,3 @@
 /* ===================================
 =SERVICES
 =================================== */
-
-.services__header {
-    display: flex;
-    flex-direction: row;
-}
